added sidenav and recursive hash sanitizing

--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ td.label {
   text-transform: capitalize;
 }
 
+.autocap {
+  text-transform: capitalize;
+}
+
 span.team {
   padding: 0.2em;  
   font-weight: bold;
