updated pit and match scouting, removed old data

--- a/templates/number.html
+++ b/templates/number.html
@@ -1,4 +1,4 @@
 <md-input-container>
-  <label class='autocap'>{{scoutMeta[key].name}}</label>
+  <label class='autocap'>{{name}}</label>
   <input type="number" ng-model='data[key]'>
 </md-input-container>
