--- a/templates/boolean.html
+++ b/templates/boolean.html
@@ -1,3 +1,3 @@
-<md-checkbox ng-model='data[key]' ng-if="scoutMeta[key].type=='boolean'" class='autocap'>
-  {{scoutMeta[key].name}}
+<md-checkbox ng-model='data[key]' class='autocap'>
+  {{name}}
 </md-checkbox>
