--- a/templates/radio.html
+++ b/templates/radio.html
@@ -1,3 +1,4 @@
+{{name}}
 <md-radio-group ng-model='data[key]'>
   <md-radio-button ng-repeat='(key, label) in scoutMeta[key].options' ng-value='key'>
     {{label}}
